--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,31 +1,22 @@
 {
     "@@locale": "en",
-    "homeProfileRouteTitle": "Hi! Pierre",
-    "@homeProfileRouteTitle": {
-        "description": "Title shown in the Profile Route of the Home Page"
-    },
-    "homeProfileRouteSubtitle": "Complete your profile",
-    "@homeProfileRouteSubtitle": {
-        "description": "Subtitle shown in the Profile Route of the Home Page"
-    },
-    "homeButtonRegister": "Register",
-    "@homeButtonRegister": {
-        "description": "Text shown in the Register Button of the Home Page"
-    },
-    "homeButtonComparator": "Comparator",
-    "@homeButtonComparator": {
-        "description": "Text shown in the Comparator Button of the Home Page"
-    },
-    "homeButtonInventory": "Inventory",
-    "@homeButtonInventory": {
-        "description": "Text shown in the Inventory Button of the Home Page"
-    },
-    "homeButtonWallet": "Wallet",
-    "@homeButtonWallet": {
-        "description": "Text shown in the Wallet Button of the Home Page"
-    },
-    "homeButtonProfile": "Profile",
-    "@homeButtonProfile": {
-        "description": "Text shown in the Profile Button of the Home Page"
+    "homePage": "Home",
+    "@homePage": {
+    "description": "Title of the Home Page",
+        "profileRoute": {
+            "title": "Hi! Pierre",
+            "subtitle": "Complete your profile"
+        },
+        "@profileRoute": {
+            "description": "Title shown in the Profile Route of the Home Page"
+        },
+        "button": {
+            "register": "Register",
+            "comparator": "Comparator",
+            "inventory": "Inventory",
+            "wallet": "Wallet",
+            "profile": "profile"
+            
+        }
     }
 }
